# LibJsonRpc

./: .clang-format  CMakeLists.txt  README.md
Documentation/: Guide.md
Source/: CMakeLists.txt  LibJsonRpc.hpp
Source/LibJsonRpc/Request/: Request.hpp  Request.test.cpp
Source/LibJsonRpc/Server/: Server.cpp  Server.hpp  Server.test.cpp
